# PDF-Indexer-

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: generate_samples.py
src/pdf_indexer/: __init__.py  __main__.py  cli.py  config.py  database.py  export.py  models.py  scanner.py  webapp.py
src/pdf_indexer/extractors/: __init__.py  base.py  data_typer.py  metadata_extractor.py  table_extractor.py  text_extractor.py
src/pdf_indexer/mcp_server/: __init__.py  __main__.py  formatters.py  server.py
src/pdf_indexer/session/: __init__.py  manager.py
src/pdf_indexer/templates/: index.html
tests/: test_export.py  test_webapp.py
