[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-indexer"
version = "1.0.0"
description = "PDF table indexer with MCP server for data science workflows"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
pdf-index = "pdf_indexer.cli:main"
pdf-extract-web = "pdf_indexer.webapp:main"

[tool.setuptools.packages.find]
where = ["src"]
